# FTP-Client

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Includes/: FtpObj.h  FtpSock.h  ftp_processor.hpp  socket.hpp
Sources/: FtpSock.cpp  ftp_client.cpp  ftp_processor.cpp  socket.cpp
src/: Ftp.cpp  FtpObj.cpp  FtpObj.h  FtpSock.cpp  FtpSock.h
